# q2-diversity

./: .copier-answers.yml  .gitignore  Makefile  licenses  pyproject.toml
conda-recipe/: meta.yaml
q2_diversity/: __init__.py  _core_metrics.py  _examples.py  _filter.py  _ordination.py  _procrustes.py  plugin_setup.py
q2_diversity/_alpha/: __init__.py  _pipeline.py  _visualizer.py
q2_diversity/_beta/: __init__.py  _beta_correlation.py  _beta_rarefaction.py  _pipeline.py  _visualizer.py
q2_diversity/tests/: test_adonis.py  test_alpha.py  test_alpha_rarefaction.py  test_beta.py  test_beta_correlation.py  test_beta_rarefaction.py  test_core_metrics.py  test_filter.py  test_ordination.py  test_plugin_setup.py  test_procrustes.py
